ADD_LIBRARY(tensordec SHARED tensordec.c)
ADD_LIBRARY(tensordecStatic STATIC tensordec.c)

TARGET_LINK_LIBRARIES(tensordec ${pkgs_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(tensordec PUBLIC ${pkgs_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(tensordec PUBLIC ${pkgs_CFLAGS_OTHER})
TARGET_LINK_LIBRARIES(tensordecStatic ${pkgs_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(tensordecStatic PUBLIC ${pkgs_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(tensordecStatic PUBLIC ${pkgs_CFLAGS_OTHER})

INSTALL(TARGETS tensordec tensordecStatic
	RUNTIME DESTINATION ${EXEC_PREFIX}
	LIBRARY DESTINATION ${GST_INSTALL_DIR}
	ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
	)
