ADD_LIBRARY(tensor_dec SHARED tensordec.c)
ADD_LIBRARY(tensor_decStatic STATIC tensordec.c)

TARGET_LINK_LIBRARIES(tensor_dec ${pkgs_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(tensor_dec PUBLIC ${pkgs_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(tensor_dec PUBLIC ${pkgs_CFLAGS_OTHER})
TARGET_LINK_LIBRARIES(tensor_decStatic ${pkgs_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(tensor_decStatic PUBLIC ${pkgs_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(tensor_decStatic PUBLIC ${pkgs_CFLAGS_OTHER})

INSTALL(TARGETS tensor_dec tensor_decStatic
	RUNTIME DESTINATION ${EXEC_PREFIX}
	LIBRARY DESTINATION ${GST_INSTALL_DIR}
	ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
	)
