ADD_LIBRARY(tensor_decoder SHARED tensordec.c)
ADD_LIBRARY(tensor_decoderStatic STATIC tensordec.c)

TARGET_LINK_LIBRARIES(tensor_decoder ${pkgs_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(tensor_decoder PUBLIC ${pkgs_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(tensor_decoder PUBLIC ${pkgs_CFLAGS_OTHER})
TARGET_LINK_LIBRARIES(tensor_decoderStatic ${pkgs_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(tensor_decoderStatic PUBLIC ${pkgs_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(tensor_decoderStatic PUBLIC ${pkgs_CFLAGS_OTHER})

INSTALL(TARGETS tensor_decoder tensor_decoderStatic
	RUNTIME DESTINATION ${EXEC_PREFIX}
	LIBRARY DESTINATION ${GST_INSTALL_DIR}
	ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
	)
