CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_LIBRARY(tensordemux SHARED gsttensordemux.c )
ADD_LIBRARY(tensordemuxStatic STATIC gsttensordemux.c)

TARGET_LINK_LIBRARIES(tensordemux ${pkgs_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(tensordemux PUBLIC ${pkgs_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(tensordemux PUBLIC ${pkgs_CFLAGS_OTHER})
TARGET_LINK_LIBRARIES(tensordemuxStatic ${pkgs_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(tensordemuxStatic PUBLIC ${pkgs_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(tensordemuxStatic PUBLIC ${pkgs_CFLAGS_OTHER})

INSTALL(TARGETS tensordemux tensordemuxStatic
	RUNTIME DESTINATION ${EXEC_PREFIX}
	LIBRARY DESTINATION ${LIB_INSTALL_DIR}
	ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
	)
